# M4-BRIEF2_minst

./: README.md  app_streamlit.py  main.py  pyproject.toml  ~$BRIEF2_ChiffresManuscrits.docx  ~WRL1132.tmp
modules/: preprocess.py
