[project]
name = "m4-brief2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "absl-py==2.3.0",
    "alembic>=1.18.4",
    "astunparse==1.6.3",
    "base>=0.0.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "lightgbm>=4.6.0",
    "loguru>=0.7.3",
    "Markdown==3.8",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "matplotlib==3.9.3",
    "mlflow>=3.10.1",
    "namex==0.1.0",
    "numpy==2.1.0",
    "opencv-python>=4.13.0.92",
    "opt_einsum==3.4.0",
    "optree==0.16.0",
    "packaging==25.0",
    "pandas>=2.3.3",
    "pillow==11.2.1",
    "protobuf==5.29.5",
    "pyan>=0.1.3",
    "pydantic>=2.11.10",
    "Pygments==2.19.1",
    "pyparsing==3.2.3",
    "pytest>=9.0.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "requests==2.32.3",
    "rich==14.0.0",
    "scikeras>=0.13.0",
    "scikit-image>=0.26.0",
    "scikit-learn==1.6.1",
    "scipy==1.15.3",
    "seaborn>=0.13.2",
    "six==1.17.0",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.55.0",
    "streamlit-drawable-canvas>=0.9.3",
    "tensorboard",
    "tensorboard-data-server==0.7.2",
    "tensorflow",  # CPU
    "termcolor==3.1.0",
    "threadpoolctl==3.6.0",
    "typing_extensions==4.13.2",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "Werkzeug==3.1.3",
    "wrapt==1.17.2",
]


[tool.uv]
extra-build-dependencies = { models = ["base"] }
